# RDF-package-for-R

RDF/: DESCRIPTION  NAMESPACES  configure.ac
RDF/R/: RDF.R  zzz.R
RDF/man/: RDF-package.Rd  expand_qname.Rd  expand_qnames.Rd  expand_qnames_vec.Rd  guess_type.Rd  guess_types.Rd  guess_types_aux.Rd  rdf_load.Rd  rdf_save.Rd
RDF/src/: Makefile  Makevars.in  RDF.c
RDF/tests/: filetest.ttl  rdftest.ttl
